--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -15,3 +15,11 @@ h4{
 .ad{
     padding-left: 5vw;
 }
+.right{
+    margin-left: 92%;
+    padding: 1vw;
+}
+.r{
+    padding-left: 1vw;
+    padding-right: 1vw;
+}
