--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -43,7 +43,9 @@
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <div class = "right">
+            <button type="submit" class="btn btn-sm btn-outline-info r"/>Submit</button>
+            </div>
         </form>
     </div>
 {% endblock %}
